# BSDiff

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatcher.cpp  native-lib.cpp
app/src/main/java/com/tming/wy/bsdiff/: BsPatcher.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
file/: old.apk  patch
gradle/wrapper/: gradle-wrapper.properties
